--- a/src/main/java/log4j.properties
+++ b/src/main/java/log4j.properties
@@ -103,7 +103,7 @@
 ################################################################################   
 ################################################################################   
 #④指定特定包的输出特定的级别
-#log4j.logger.org.springframework=DEBUG   
+#log4j.logger.org.springframework=DEBUG
 ################################################################################   
 
 
@@ -178,3 +178,8 @@ log4j.appender.logDB.URL = jdbc:mysql://127.0.0.1:3306/xly
 log4j.appender.logDB.User = root
 log4j.appender.logDB.Password = 123456
 log4j.appender.logDB.Sql = INSERT INTOT_log4j(project_name,create_date,level,category,file_name,thread_name,line,all_category,message)values('Struts2','%d{yyyy-MM-ddHH:mm:ss}','%p','%c','%F','%t','%L','%l','%m')
+
+
+
+#指定特定包的输出特定的级别
+com.zhuang.log.test = DEBUG,systemOut
