--- a/src/main/java/log4j.properties
+++ b/src/main/java/log4j.properties
@@ -182,4 +182,4 @@ log4j.appender.logDB.Sql = INSERT INTOT_log4j(project_name,create_date,level,cat
 
 
 #指定特定包的输出特定的级别
-com.zhuang.log.test = DEBUG,systemOut
+com.zhuang.log.test = ERROR,systemOut
