--- a/src/main/java/log4j.properties
+++ b/src/main/java/log4j.properties
@@ -108,7 +108,7 @@
 
 
 #log4j.rootLogger =ALL,systemOut,logFile,logDailyFile,logRollingFile,logMail,logDB   
-log4j.rootLogger =DEBUG,systemOut,logFile
+log4j.rootLogger =DEBUG,systemOut
 
 #输出到控制台
 log4j.appender.systemOut = org.apache.log4j.ConsoleAppender
@@ -182,4 +182,4 @@ log4j.appender.logDB.Sql = INSERT INTOT_log4j(project_name,create_date,level,cat
 
 
 #指定特定包的输出特定的级别
-log4j.logger.com.zhuang.log.test = ERROR,systemOut
+log4j.logger.com.zhuang.log.test = ERROR,logFile
