--- a/src/main/java/log4j.properties
+++ b/src/main/java/log4j.properties
@@ -135,7 +135,7 @@ log4j.appender.logDailyFile.layout.ConversionPattern = [%-5p][%-22d{yyyy-MM-dd H
 log4j.appender.logDailyFile.Threshold = DEBUG
 log4j.appender.logDailyFile.ImmediateFlush = TRUE
 log4j.appender.logDailyFile.Append = TRUE
-log4j.appender.logDailyFile.File = ../Struts2/WebRoot/log/DailyFile/log4j_Struts
+log4j.appender.logDailyFile.File = d:/temp/test.log
 log4j.appender.logDailyFile.DatePattern = '.'yyyy-MM-dd-HH-mm'.log'
 log4j.appender.logDailyFile.Encoding = UTF-8
 
@@ -147,7 +147,7 @@ log4j.appender.logRollingFile.layout.ConversionPattern = [%-5p][%-22d{yyyy-MM-dd
 log4j.appender.logRollingFile.Threshold = DEBUG
 log4j.appender.logRollingFile.ImmediateFlush = TRUE
 log4j.appender.logRollingFile.Append = TRUE
-log4j.appender.logRollingFile.File = ../Struts2/WebRoot/log/RollingFile/log4j_Struts.log
+log4j.appender.logRollingFile.File = d:/temp/test.log
 log4j.appender.logRollingFile.MaxFileSize = 1MB
 log4j.appender.logRollingFile.MaxBackupIndex = 10
 log4j.appender.logRollingFile.Encoding = UTF-8
@@ -182,4 +182,4 @@ log4j.appender.logDB.Sql = INSERT INTOT_log4j(project_name,create_date,level,cat
 
 
 #指定特定包的输出特定的级别
-log4j.logger.com.zhuang.log.test = ERROR,logFile
+log4j.logger.com.zhuang.log.test = ERROR,logDailyFile
