--- a/src/main/java/log4j.properties
+++ b/src/main/java/log4j.properties
@@ -107,79 +107,79 @@
 ################################################################################   
 
 
-#log4j.rootLogger =ALL,systemOut,logFile,logDailyFile,logRollingFile,logMail,logDB   
-log4j.rootLogger =DEBUG,systemOut
+#log4j.rootLogger =ALL,console,file,dailyRollingFile,rollingFile,smtp,jdbc   
+log4j.rootLogger =DEBUG,console
 
 #输出到控制台
-log4j.appender.systemOut = org.apache.log4j.ConsoleAppender
-log4j.appender.systemOut.layout = org.apache.log4j.PatternLayout
-log4j.appender.systemOut.layout.ConversionPattern = [%-5p][%-22d{yyyy-MM-dd HH:mm:ssS}][%l]%n%m%n
-log4j.appender.systemOut.Threshold = DEBUG
-log4j.appender.systemOut.ImmediateFlush = TRUE
-log4j.appender.systemOut.Target = System.out
+log4j.appender.console = org.apache.log4j.ConsoleAppender
+log4j.appender.console.layout = org.apache.log4j.PatternLayout
+log4j.appender.console.layout.ConversionPattern = [%-5p][%-22d{yyyy-MM-dd HH:mm:ssS}][%l]%n%m%n
+log4j.appender.console.Threshold = DEBUG
+log4j.appender.console.ImmediateFlush = TRUE
+log4j.appender.console.Target = System.out
 
 #输出到文件
-log4j.appender.logFile = org.apache.log4j.FileAppender
-log4j.appender.logFile.layout = org.apache.log4j.PatternLayout
-log4j.appender.logFile.layout.ConversionPattern = [%-5p][%-22d{yyyy-MM-dd HH:mm:ssS}][%l]%n%m%n
-log4j.appender.logFile.Threshold = DEBUG
-log4j.appender.logFile.ImmediateFlush = TRUE
-log4j.appender.logFile.Append = TRUE
-log4j.appender.logFile.File = d:/temp/test.log
-log4j.appender.logFile.Encoding = UTF-8
+log4j.appender.file = org.apache.log4j.FileAppender
+log4j.appender.file.layout = org.apache.log4j.PatternLayout
+log4j.appender.file.layout.ConversionPattern = [%-5p][%-22d{yyyy-MM-dd HH:mm:ssS}][%l]%n%m%n
+log4j.appender.file.Threshold = DEBUG
+log4j.appender.file.ImmediateFlush = TRUE
+log4j.appender.file.Append = TRUE
+log4j.appender.file.File = d:/temp/test.log
+log4j.appender.file.Encoding = UTF-8
 
 #按DatePattern输出到文件
-log4j.appender.logDailyFile = org.apache.log4j.DailyRollingFileAppender
-log4j.appender.logDailyFile.layout = org.apache.log4j.PatternLayout
-log4j.appender.logDailyFile.layout.ConversionPattern = [%-5p][%-22d{yyyy-MM-dd HH:mm:ssS}][%l]%n%m%n
-log4j.appender.logDailyFile.Threshold = DEBUG
-log4j.appender.logDailyFile.ImmediateFlush = TRUE
-log4j.appender.logDailyFile.Append = TRUE
-log4j.appender.logDailyFile.File = d:/temp/test.log
-log4j.appender.logDailyFile.DatePattern = '.'yyyy-MM-dd-HH-mm'.log'
-log4j.appender.logDailyFile.Encoding = UTF-8
+log4j.appender.dailyRollingFile = org.apache.log4j.DailyRollingFileAppender
+log4j.appender.dailyRollingFile.layout = org.apache.log4j.PatternLayout
+log4j.appender.dailyRollingFile.layout.ConversionPattern = [%-5p][%-22d{yyyy-MM-dd HH:mm:ssS}][%l]%n%m%n
+log4j.appender.dailyRollingFile.Threshold = DEBUG
+log4j.appender.dailyRollingFile.ImmediateFlush = TRUE
+log4j.appender.dailyRollingFile.Append = TRUE
+log4j.appender.dailyRollingFile.File = d:/temp/test.log
+log4j.appender.dailyRollingFile.DatePattern = '.'yyyy-MM-dd-HH-mm'.log'
+log4j.appender.dailyRollingFile.Encoding = UTF-8
 
 
 #设定文件大小输出到文件
-log4j.appender.logRollingFile = org.apache.log4j.RollingFileAppender
-log4j.appender.logRollingFile.layout = org.apache.log4j.PatternLayout
-log4j.appender.logRollingFile.layout.ConversionPattern = [%-5p][%-22d{yyyy-MM-dd HH:mm:ssS}][%l]%n%m%n
-log4j.appender.logRollingFile.Threshold = DEBUG
-log4j.appender.logRollingFile.ImmediateFlush = TRUE
-log4j.appender.logRollingFile.Append = TRUE
-log4j.appender.logRollingFile.File = d:/temp/test.log
-log4j.appender.logRollingFile.MaxFileSize = 1MB
-log4j.appender.logRollingFile.MaxBackupIndex = 10
-log4j.appender.logRollingFile.Encoding = UTF-8
+log4j.appender.rollingFile = org.apache.log4j.RollingFileAppender
+log4j.appender.rollingFile.layout = org.apache.log4j.PatternLayout
+log4j.appender.rollingFile.layout.ConversionPattern = [%-5p][%-22d{yyyy-MM-dd HH:mm:ssS}][%l]%n%m%n
+log4j.appender.rollingFile.Threshold = DEBUG
+log4j.appender.rollingFile.ImmediateFlush = TRUE
+log4j.appender.rollingFile.Append = TRUE
+log4j.appender.rollingFile.File = d:/temp/test.log
+log4j.appender.rollingFile.MaxFileSize = 1MB
+log4j.appender.rollingFile.MaxBackupIndex = 10
+log4j.appender.rollingFile.Encoding = UTF-8
 
 #用Email发送日志
-log4j.appender.logMail = org.apache.log4j.net.SMTPAppender   
-log4j.appender.logMail.layout = org.apache.log4j.HTMLLayout
-log4j.appender.logMail.layout.LocationInfo = TRUE
-log4j.appender.logMail.layout.Title = Struts2 Mail LogFile
-log4j.appender.logMail.Threshold = DEBUG
-log4j.appender.logMail.SMTPDebug = FALSE
-log4j.appender.logMail.SMTPHost = SMTP.163.com
-log4j.appender.logMail.From = xly3000@163.com
-log4j.appender.logMail.To = xly3000@gmail.com
-#log4j.appender.logMail.Cc = xly3000@gmail.com
-#log4j.appender.logMail.Bcc = xly3000@gmail.com
-log4j.appender.logMail.SMTPUsername = xly3000
-log4j.appender.logMail.SMTPPassword = 1234567
-log4j.appender.logMail.Subject = Log4j Log Messages
-#log4j.appender.logMail.BufferSize = 1024
-#log4j.appender.logMail.SMTPAuth = TRUE
+log4j.appender.smtp = org.apache.log4j.net.SMTPAppender   
+log4j.appender.smtp.layout = org.apache.log4j.HTMLLayout
+log4j.appender.smtp.layout.LocationInfo = TRUE
+log4j.appender.smtp.layout.Title = Struts2 Mail LogFile
+log4j.appender.smtp.Threshold = DEBUG
+log4j.appender.smtp.SMTPDebug = FALSE
+log4j.appender.smtp.SMTPHost = SMTP.163.com
+log4j.appender.smtp.From = xly3000@163.com
+log4j.appender.smtp.To = xly3000@gmail.com
+#log4j.appender.smtp.Cc = xly3000@gmail.com
+#log4j.appender.smtp.Bcc = xly3000@gmail.com
+log4j.appender.smtp.SMTPUsername = xly3000
+log4j.appender.smtp.SMTPPassword = 1234567
+log4j.appender.smtp.Subject = Log4j Log Messages
+#log4j.appender.smtp.BufferSize = 1024
+#log4j.appender.smtp.SMTPAuth = TRUE
 
 #将日志登录到MySQL数据库
-log4j.appender.logDB = org.apache.log4j.jdbc.JDBCAppender
-log4j.appender.logDB.layout = org.apache.log4j.PatternLayout
-log4j.appender.logDB.Driver = com.mysql.jdbc.Driver
-log4j.appender.logDB.URL = jdbc:mysql://127.0.0.1:3306/xly
-log4j.appender.logDB.User = root
-log4j.appender.logDB.Password = 123456
-log4j.appender.logDB.Sql = INSERT INTOT_log4j(project_name,create_date,level,category,file_name,thread_name,line,all_category,message)values('Struts2','%d{yyyy-MM-ddHH:mm:ss}','%p','%c','%F','%t','%L','%l','%m')
+log4j.appender.jdbc = org.apache.log4j.jdbc.JDBCAppender
+log4j.appender.jdbc.layout = org.apache.log4j.PatternLayout
+log4j.appender.jdbc.Driver = com.mysql.jdbc.Driver
+log4j.appender.jdbc.URL = jdbc:mysql://127.0.0.1:3306/xly
+log4j.appender.jdbc.User = root
+log4j.appender.jdbc.Password = 123456
+log4j.appender.jdbc.Sql = INSERT INTOT_log4j(project_name,create_date,level,category,file_name,thread_name,line,all_category,message)values('Struts2','%d{yyyy-MM-ddHH:mm:ss}','%p','%c','%F','%t','%L','%l','%m')
 
 
 
 #指定特定包的输出特定的级别
-log4j.logger.com.zhuang.log.test = ERROR,logDailyFile
+log4j.logger.com.zhuang.log.test = ERROR,dailyRollingFile
